--- a/hand_tracking.ipynb
+++ b/hand_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "5a03b2c5",
    "metadata": {},
    "outputs": [],
@@ -14,13 +14,370 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "a53aa763",
    "metadata": {},
    "outputs": [],
    "source": [
     "mp_hands = mp.solutions.hands\n",
     "mp_drawing = mp.solutions.drawing_utils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4a9edb8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# kalman filter\n",
+    "import numpy as np\n",
+    "\n",
+    "class Kalman1D:\n",
+    "    def __init__(self, process_variance=1e-5, measurement_variance=1e-3):\n",
+    "        # State vector: [position, velocity]\n",
+    "        self.x = np.array([[0.5], [0.0]]) \n",
+    "        \n",
+    "        # Uncertainty covariance matrix\n",
+    "        self.P = np.eye(2)\n",
+    "        \n",
+    "        # Transition matrix (assuming constant velocity)\n",
+    "        # x_new = x_old + v_old * dt\n",
+    "        self.F = np.array([[1.0, 1.0],\n",
+    "                           [0.0, 1.0]])\n",
+    "        \n",
+    "        # Measurement matrix (we only measure position)\n",
+    "        self.H = np.array([[1.0, 0.0]])\n",
+    "        \n",
+    "        # Noise matrices\n",
+    "        self.Q = np.eye(2) * process_variance\n",
+    "        self.R = np.array([[measurement_variance]])\n",
+    "\n",
+    "    def update(self, measurement):\n",
+    "        # 1. Predict\n",
+    "        self.x = np.dot(self.F, self.x)\n",
+    "        self.P = np.dot(np.dot(self.F, self.P), self.F.T) + self.Q\n",
+    "\n",
+    "        # 2. Update (Correct)\n",
+    "        z = np.array([[measurement]])\n",
+    "        y = z - np.dot(self.H, self.x) # Innovation\n",
+    "        S = np.dot(self.H, np.dot(self.P, self.H.T)) + self.R\n",
+    "        K = np.dot(np.dot(self.P, self.H.T), np.linalg.inv(S)) # Kalman Gain\n",
+    "        \n",
+    "        self.x = self.x + np.dot(K, y)\n",
+    "        self.P = self.P - np.dot(np.dot(K, self.H), self.P)\n",
+    "        \n",
+    "        return self.x[0][0] # Return smoothed position\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "11d159fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "class KalmanFilter2D:\n",
+    "    def __init__(self, dt=1.0, process_noise=0.1, measurement_noise=0.01):\n",
+    "        # 1. State Vector [x, y, vx, vy]\n",
+    "        self.x = np.zeros((4, 1)) \n",
+    "        \n",
+    "        # 2. State Covariance (Uncertainty)\n",
+    "        self.P = np.eye(4) * 500.0 \n",
+    "        \n",
+    "        # 3. Transition Matrix (Physics model: pos = pos + vel * dt)\n",
+    "        self.F = np.array([\n",
+    "            [1, 0, dt, 0],\n",
+    "            [0, 1, 0, dt],\n",
+    "            [0, 0, 1, 0],\n",
+    "            [0, 0, 0, 1]\n",
+    "        ])\n",
+    "        \n",
+    "        # 4. Measurement Matrix (We only observe x and y, not velocities)\n",
+    "        self.H = np.array([\n",
+    "            [1, 0, 0, 0],\n",
+    "            [0, 1, 0, 0]\n",
+    "        ])\n",
+    "        \n",
+    "        # 5. Measurement Noise Covariance\n",
+    "        self.R = np.eye(2) * measurement_noise\n",
+    "        \n",
+    "        # 6. Process Noise Covariance (How much we trust our physics model)\n",
+    "        self.Q = np.eye(4) * process_noise\n",
+    "\n",
+    "    def update(self, z_x, z_y):\n",
+    "        # Measurement vector\n",
+    "        z = np.array([[z_x], [z_y]])\n",
+    "\n",
+    "        # --- PREDICT ---\n",
+    "        self.x = np.dot(self.F, self.x)\n",
+    "        self.P = np.dot(np.dot(self.F, self.P), self.F.T) + self.Q\n",
+    "\n",
+    "        # --- UPDATE (Correct) ---\n",
+    "        # S = H*P*H' + R\n",
+    "        S = np.dot(self.H, np.dot(self.P, self.H.T)) + self.R\n",
+    "        # K = P*H'*inv(S)\n",
+    "        K = np.dot(np.dot(self.P, self.H.T), np.linalg.inv(S))\n",
+    "        \n",
+    "        # New State = x + K*(z - H*x)\n",
+    "        y = z - np.dot(self.H, self.x)\n",
+    "        self.x = self.x + np.dot(K, y)\n",
+    "        \n",
+    "        # New Covariance = (I - K*H)*P\n",
+    "        I = np.eye(4)\n",
+    "        self.P = np.dot((I - np.dot(K, self.H)), self.P)\n",
+    "\n",
+    "        # Return only the filtered [x, y]\n",
+    "        return self.x[0, 0], self.x[1, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "4c11a95f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "import statistics\n",
+    "\n",
+    "class HandFilterPipeline:\n",
+    "    def __init__(self, window_size=3):\n",
+    "        # Buffers for Median Filter\n",
+    "        self.x_buffer = deque(maxlen=window_size)\n",
+    "        self.y_buffer = deque(maxlen=window_size)\n",
+    "        \n",
+    "        # Kalman Filters\n",
+    "        self.kalman = KalmanFilter2D(process_noise=1e-4, measurement_noise=0.01)\n",
+    "\n",
+    "    def filter(self, raw_x, raw_y):\n",
+    "        # --- Stage 1: Median Filter (Removes Spikes) ---\n",
+    "        self.x_buffer.append(raw_x)\n",
+    "        self.y_buffer.append(raw_y)\n",
+    "        \n",
+    "        # Wait until buffer is full to start filtering properly\n",
+    "        if len(self.x_buffer) < self.x_buffer.maxlen:\n",
+    "            return raw_x, raw_y\n",
+    "\n",
+    "        med_x = statistics.median(self.x_buffer)\n",
+    "        med_y = statistics.median(self.y_buffer)\n",
+    "\n",
+    "        # --- Stage 2: Kalman Filter (Smooths Jitter) ---\n",
+    "        smooth_x, smooth_y = self.kalman.update(med_x, med_y)\n",
+    "\n",
+    "        return smooth_x, smooth_y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d95bf860",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "from collections import deque\n",
+    "\n",
+    "# Trajectory lifetime (seconds)\n",
+    "TRAJ_DURATION = 3.0\n",
+    "\n",
+    "# Store (x, y, timestamp)\n",
+    "raw_index_traj = deque()\n",
+    "filtered_index_traj = deque()\n",
+    "raw_thumb_traj = deque()\n",
+    "filtered_thumb_traj = deque()\n",
+    "\n",
+    "def draw_fading_trajectory(frame, traj, color, duration):\n",
+    "    overlay = frame.copy()\n",
+    "    now = time.time()\n",
+    "\n",
+    "    for i in range(1, len(traj)):\n",
+    "        x1, y1, t1 = traj[i - 1]\n",
+    "        x2, y2, t2 = traj[i]\n",
+    "\n",
+    "        age = now - t2\n",
+    "        alpha = max(0.0, 1.0 - age / duration)\n",
+    "\n",
+    "        thickness = int(1 + 4 * alpha)\n",
+    "\n",
+    "        cv2.line(\n",
+    "            overlay,\n",
+    "            (int(x1), int(y1)),\n",
+    "            (int(x2), int(y2)),\n",
+    "            color,\n",
+    "            thickness\n",
+    "        )\n",
+    "\n",
+    "    # Blend overlay back onto frame\n",
+    "    cv2.addWeighted(overlay, 0.7, frame, 0.3, 0, frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "8eb278c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "PINCHING_THRESHOLD = 0.05\n",
+    "\n",
+    "def distance(p1, p2):\n",
+    "    return math.sqrt((p1[0] - p2[0])**2 + (p1[1] - p2[1])**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbbe304a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "I0000 00:00:1768119251.250792  144796 gl_context.cc:357] GL version: 2.1 (2.1 Metal - 89.4), renderer: Apple M1\n",
+      "W0000 00:00:1768119251.282243  166420 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
+      "W0000 00:00:1768119251.290914  166426 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 104\u001b[39m\n\u001b[32m     85\u001b[39m             \u001b[38;5;66;03m# draw_fading_trajectory(\u001b[39;00m\n\u001b[32m     86\u001b[39m             \u001b[38;5;66;03m#     frame,\u001b[39;00m\n\u001b[32m     87\u001b[39m             \u001b[38;5;66;03m#     raw_thumb_traj,\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m     96\u001b[39m             \u001b[38;5;66;03m#     duration=TRAJ_DURATION\u001b[39;00m\n\u001b[32m     97\u001b[39m             \u001b[38;5;66;03m# )\u001b[39;00m\n\u001b[32m    102\u001b[39m     cv2.imshow(\u001b[33m\"\u001b[39m\u001b[33mHand Tracking\u001b[39m\u001b[33m\"\u001b[39m, frame)\n\u001b[32m--> \u001b[39m\u001b[32m104\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mcv2\u001b[49m\u001b[43m.\u001b[49m\u001b[43mwaitKey\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m)\u001b[49m & \u001b[32m0xFF\u001b[39m == \u001b[32m27\u001b[39m:\n\u001b[32m    105\u001b[39m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[32m    107\u001b[39m cap.release()\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "with mp_hands.Hands(\n",
+    "    static_image_mode=False,\n",
+    "    max_num_hands=2,\n",
+    "    min_detection_confidence=0.6,\n",
+    "    min_tracking_confidence=0.6,\n",
+    ") as hands:\n",
+    "\n",
+    "    cap = cv2.VideoCapture(0)\n",
+    "    hand_filter = HandFilterPipeline(\n",
+    "    window_size=5    # median filter window\n",
+    ")\n",
+    "\n",
+    "    while cap.isOpened():\n",
+    "        success, frame = cap.read()\n",
+    "        if not success:\n",
+    "            break\n",
+    "\n",
+    "        # Get frame dimensions for pixel conversion\n",
+    "        h, w, c = frame.shape\n",
+    "\n",
+    "        frame_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "        results = hands.process(frame_rgb)\n",
+    "\n",
+    "        if results.multi_hand_landmarks:\n",
+    "            for hand_landmarks in results.multi_hand_landmarks:\n",
+    "                mp_drawing.draw_landmarks(\n",
+    "                    frame, hand_landmarks, mp_hands.HAND_CONNECTIONS\n",
+    "                )\n",
+    "\n",
+    "                # Example: Get the Tip of the Index Finger (Landmark 8)\n",
+    "                index_finger_tip = hand_landmarks.landmark[8]\n",
+    "                thumb_tip = hand_landmarks.landmark[4]\n",
+    "                \n",
+    "                \n",
+    "                raw_x_index = index_finger_tip.x * w\n",
+    "                raw_y_index = index_finger_tip.y * h\n",
+    "                raw_x_thumb = thumb_tip.x * w\n",
+    "                raw_y_thumb = thumb_tip.y * h\n",
+    "                # lets apply the filtering here\n",
+    "                filtered_x_index, filtered_y_index = hand_filter.filter(raw_x_index, raw_y_index)\n",
+    "                filtered_x_thumb, filtered_y_thumb = hand_filter.filter(raw_x_thumb, raw_y_thumb)\n",
+    "                index_tip = mp.tasks.vision.NormalizedLandmark(x=filtered_x, y=filtered_y, z=index_tip.z)\n",
+    "                \n",
+    "                # pinching check\n",
+    "                dist = distance((filtered_x_index, filtered_y_index), (filtered_x_thumb, filtered_y_thumb))\n",
+    "                is_pinching = dist < PINCHING_THRESHOLD\n",
+    "                \n",
+    "                if is_pinching:\n",
+    "                    cv2.putText(frame, 'Pinching', (10, 30), cv2.FONT_HERSHEY_SIMPLEX,\n",
+    "                                1, (0, 255, 0), 2, cv2.LINE_AA)\n",
+    "                \n",
+    "                # current time stamp\n",
+    "                \n",
+    "                now = time.time()\n",
+    "                \n",
+    "                raw_index_traj.append((raw_x_index, raw_y_index, now))\n",
+    "                filtered_index_traj.append((filtered_x_index, filtered_y_index, now))\n",
+    "                \n",
+    "                raw_thumb_traj.append((raw_x_thumb, raw_y_thumb, now))\n",
+    "                filtered_thumb_traj.append((filtered_x_thumb, filtered_y_thumb, now))\n",
+    "                \n",
+    "                \n",
+    "                # remove old trajectory points\n",
+    "                # Remove old points\n",
+    "                while raw_index_traj and now - raw_index_traj[0][2] > TRAJ_DURATION:\n",
+    "                    raw_index_traj.popleft()\n",
+    "\n",
+    "                while filtered_index_traj and now - filtered_index_traj[0][2] > TRAJ_DURATION:\n",
+    "                    filtered_index_traj.popleft()\n",
+    "                \n",
+    "                draw_fading_trajectory(\n",
+    "                    frame,\n",
+    "                    raw_index_traj,\n",
+    "                    color=(0, 0, 255),   # red (BGR) raw for index finger\n",
+    "                    duration=TRAJ_DURATION\n",
+    "                )\n",
+    "\n",
+    "                # Green: filtered trajectory for index finger \n",
+    "                draw_fading_trajectory(\n",
+    "                    frame,\n",
+    "                    filtered_index_traj,\n",
+    "                    color=(0, 255, 0),   # green\n",
+    "                    duration=TRAJ_DURATION\n",
+    "                )\n",
+    "                \n",
+    "                # draw_fading_trajectory(\n",
+    "                #     frame,\n",
+    "                #     raw_thumb_traj,\n",
+    "                #     color=(255,255,0 ),   # cyan\n",
+    "                #     duration=TRAJ_DURATION\n",
+    "                # )\n",
+    "                \n",
+    "                # draw_fading_trajectory(\n",
+    "                #     frame,\n",
+    "                #     filtered_thumb_traj,\n",
+    "                #     color=(255, 0, 0),   # blue\n",
+    "                #     duration=TRAJ_DURATION\n",
+    "                # )\n",
+    "                \n",
+    "                \n",
+    "                \n",
+    "\n",
+    "        cv2.imshow(\"Hand Tracking\", frame)\n",
+    "\n",
+    "        if cv2.waitKey(1) & 0xFF == 27:\n",
+    "            break\n",
+    "\n",
+    "    cap.release()\n",
+    "    cv2.destroyAllWindows()"
    ]
   },
   {
